[gd_scene load_steps=5 format=3 uid="uid://dqeoyiig2xv07"]

[ext_resource type="Script" path="res://scenes/misc/settings_window.gd" id="1_1l533"]
[ext_resource type="PackedScene" uid="uid://blev8t8g4iq0m" path="res://scenes/misc/icon_button.tscn" id="2_7d68x"]
[ext_resource type="Texture2D" uid="uid://bcdguxmk5g843" path="res://assets/icons/x.png" id="3_7ubp8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jebsj"]
bg_color = Color(0, 0.301961, 0.301961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SettingsWindow" type="CenterContainer"]
custom_minimum_size = Vector2(1280, 720)
script = ExtResource("1_1l533")

[node name="FullscreenClose" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jebsj")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
text = "Settings"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IconButton" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar" instance=ExtResource("2_7d68x")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_7ubp8")

[node name="UseEnProxies" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Use EN Proxies when available"

[connection signal="pressed" from="FullscreenClose" to="." method="close_window"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TitleBar/IconButton" to="." method="close_window"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/UseEnProxies" to="." method="change_setting" binds= ["UseEnProxies"]]
